[package]
name = "vproxy"
version = "1.2.4"
edition = "2021"
authors = ["gngppz@gmail.com"]
description = "An easy and powerful Rust HTTP/Socks5/HTTP2Socks5 Proxy"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/xiaozhou26/vproxy"
repository = "https://github.com/xiaozhou26/vproxy"
rust-version = "1.76"

[dependencies]
base64 = "0.22.1"
cidr = "0.2.3"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "io-util",
] }
rand = "0.8.5"
clap = { version = "4.5.16", features = ["derive", "env"] }
self-github-update = { version = "0.39.0", features = [
    "archive-tar",
    "compression-flate2",
] }

# for log
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# for http
http = "1.1.0"
hyper = { version = "1.4.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.7", features = ["full"] }
http-body-util = "0.1.2"

# for socks5
bytes = "1.7.1"
pin-project-lite = "0.2.14"
tokio-stream = "0.1.15"
percent-encoding = "2.3.1"
async-trait = "0.1.82"

# for memory allocator
tcmalloc = { version = "0.3.0", optional = true }
snmalloc-rs = { version = "0.3.6", optional = true }
rpmalloc = { version = "0.2.2", optional = true }
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", optional = true }
mimalloc = { version = "0.1.43", default-features = false, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
sysctl = "0.5.5"
rtnetlink = "0.14.1"
netlink-packet-route = "0.20.1"
futures = "0.3.30"

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.29.0", features = ["user", "signal", "resource"] }
sysinfo = { version = "0.31.4", default-features = false }

[features]
default = ["mimalloc"]
jemalloc = ["jemallocator"]
tcmalloc = ["tcmalloc/bundled"]
snmalloc = ["snmalloc-rs"]
rpmalloc = ["dep:rpmalloc"]
mimalloc = ["dep:mimalloc"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"
